# foundationallm

./: .gitignore  .terraformignore  CNAME  CONTRIBUTING.md  README.md  documentation-generation.html  index.html  index.json  manifest.json  package-lock.json  package.json  realtime-speech-to-speech-migration.md  schema.html  toc.html  toc.json  versioning.sh  xrefmap.yml
.github/: copilot-instructions.md  pull_request_template.md
api/: index.html
automation/: publish.ps1
concepts/: index.html
deploy/: README.md  gvalues.template.yml
deployment/: app-configuration-values.html  azure-resource-providers-requirements.html  configure-access-control-for-services.html  custom-domains.html  deployment-configuration.html  deployment-quick-start.html  deployment-standard.html  index.html  soft-delete.html
development/: development-approach.html  development-local.html  index.html
docs/: CLEANUP-PLAN.html  CLEANUP-PLAN.md  CONTENT-TRACKING.html  CONTENT-TRACKING.md  DOCUMENTATION-STATUS.html  DOCUMENTATION_UPDATE_PLAN.md  DOCUMENTATION_UPDATE_SUMMARY.md  REORGANIZATION-PLAN.html  REORGANIZATION-PLAN.md  docfx.json  index.html  (+10 more)
evaluation/python/agent-test-harness/pkg/: .gitignore  README.md  pyproject.toml
evaluation/python/agent-test-harness/pkg/foundationallm_agent_evaluation/: generate_tests.py  html_reporter.py  run_tests.py  test_authentication_manager.py  test_harness.py
evaluation/python/agent-test-harness/pkg/foundationallm_agent_evaluation/test-suites/: test_suites.json
src/python/FastMCPAgentServer/: README.md  pyproject.toml
src/python/FastMCPAgentServer/foundationallm_agent_mcp/: __init__.py  __main__.py  auth.py  config.py  management_client.py  models.py  server.py
(+6266 files in other folders)
